5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1785_3123.log
== TEST (2019-05-30 11:21:40) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero")))
i = 0 
while(i != size(x)):
	m = v[i]**1 + m / size(n)
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:08) 
-- CODE:
from  numpy import*
m = 0
v  = array(eval(input("numero")))
i = 0 
while(i != size(v)):
	m = v[i]**1 + m / size(v)
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:38) 
-- CODE:
from  numpy import*
m = 0
v  = array(eval(input("numero;")))
i = 0 
while(i != size(v)):
	m = v[i]**1 + m / size(v)
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:50) 
-- CODE:
from  numpy import*
m = 0
v  = array(eval(input("numero;")))
i = 0 
while(i != size(v)):
	m = v[i]**-1 + m / size(v)
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:29) 
-- CODE:
from  numpy import*
m = 0
v  = array(eval(input("numero;")))
i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v))**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:25:38) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
z = [-1:]
i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v)+z -1)**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
File "XXXX", line 5
    z = [-1:]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:25:48) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
z = [-1:0]
i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v)+z -1)**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
File "XXXX", line 5
    z = [-1:0]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:26:54) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 

i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v)+v(size(n)-1)**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
File "XXXX", line 9
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:06) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 

i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v)+v(size(n)-1)**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
File "XXXX", line 9
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:26) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 

i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v)+v(size(v)-1)**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
File "XXXX", line 9
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:16) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v)
i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v)+(v-1)**-1)**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:45) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v)
i = 0 
while(i != size(v)):
	m = (v[i]**-1 + m / size(v)+(n-1)**-1)**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:07) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = ((v[i]**-1 + m + n**-1)/ size(v))**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:39) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = ((v[i]**-1 + m + (n**-1))/ size(v))**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:00) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = ((v[i]**-1 + m + (n**-1))
	i = i +1
	z = m / size(v)
print(round(m,2))
-- ERROR:
File "XXXX", line 9
    i = i +1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:16) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = ((v[i]**-1 + m + (n**-1)))
	i = i +1
	z = m / size(v)
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:28) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = ((v[i]**-1 + m + (n**-1)))
	i = i +1
	z = m / size(v)
print(round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:21) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m =v[i]**-1+ m
	i = i +1
	if(i == size(v))
		z = (m + n**1/size(n))**-1
print(round(z,2))
-- ERROR:
File "XXXX", line 10
    if(i == size(v))
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:25) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m =v[i]**-1+ m
	i = i +1
	if(i == size(v)):
		z = (m + n**1/size(n))**-1
print(round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:43) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m/size(v))**-1
	i = i +1
	
print(round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:53) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m/size(v))**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:37:39) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m/size(v))**-1
	i = i +1
	
print(round(m,2))
-- EXECUTION TIME:
0.554074
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
3.95
---- user output:
2.28
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
2.69
---- user output:
2.06
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.33
---- user output:
1.83
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:44) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m/size(v))**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:11) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 
n = size(v) - 1
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m/size(v))**-1
	i = i +1
	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:09) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 

i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
z = m + m[i]**-1/size(v)

	
print(round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:40:41) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
m = 0 

i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
z = ((m + m[i]**-1)/size(v))**-1

	
print(round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:30) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
z = ((m + m[i]**-1)/size(v))**-1

	
print(round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:44) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
z = ((m + m**-1)/size(v))**-1

	
print(round(z,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:19) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
   z = ((m + m[i]**-1)/size(v))**-1

	
print(round(z,2))
-- ERROR:
File "XXXX", line 11
    z = ((m + m[i]**-1)/size(v))**-1
                                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:30) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
   z = ((m + m[i]**-1)/size(v))

	
print(round(z,2))
-- ERROR:
File "XXXX", line 11
    z = ((m + m[i]**-1)/size(v))
                               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:02) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
   z = (m + m[i]**-1)/size(v)

	
print(round(z,2))
-- ERROR:
File "XXXX", line 11
    z = (m + m[i]**-1)/size(v)
                             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:17) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
   z = m + m[i]**-1/size(v)

	
print(round(z,2))
-- ERROR:
File "XXXX", line 11
    z = m + m[i]**-1/size(v)
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:46) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = (v[i]**-1+ m)
	i = i +1
	
   z = m + v[i]**-1/size(v)

	
print(round(z,2))
-- ERROR:
File "XXXX", line 11
    z = m + v[i]**-1/size(v)
                           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:42) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = ((v[i]**-1+ m)/size(v))**-1
	i = i 1


	
print(round(m,2))
-- ERROR:
File "XXXX", line 9
    i = i 1
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:46) 
-- CODE:
from  numpy import*

v  = array(eval(input("numero;")))
z = 0
m = 0 
i = 0 
while(i != size(v)):
	m = ((v[i]**-1+ m)/size(v))**-1
	i = i + 1


	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
